--- a/.github/workflows/build-manual.yml
+++ b/.github/workflows/build-manual.yml
@@ -1,5 +1,8 @@
 name: Build Narrative Manual
-on: [push] 
+on:
+    push:
+        branches:
+          - main
 jobs:
     compile:
         name: Build markdown and pdf
